# fastapi_ci-cd

./: README.md  docker-compose.yaml
.github/workflows/: deploy.yml  docker-image.yml  run_tests.yml  test.yml
backend/: Dockerfile  main.py  pyproject.toml  settings.py
backend/tests/unit_tests/: base_test.py
